# player-performance-prediction

./: .gitignore  .pre-commit-config.yaml  Makefile  dvc.yaml  params.yaml  pyproject.toml  requirements.in  requirements.txt
.dvc/: config
.ipynb_checkpoints/: config-checkpoint.yaml  read_config-checkpoint.py
configs/: config.yaml  read_config.py
data/processed/: .gitignore  .gitkeep  test.csv.dvc  train.csv.dvc  validation.csv.dvc
data/raw/: .gitignore  fifa_world_cup_2026_player_performance.csv.dvc
models/: .gitkeep
notebooks/: Data_Preprocessing_Pipeline.ipynb  FIFA_2026_Data_Exploration.ipynb
src/player_prediction.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/player_prediction/data/: data_processing.py
src/player_prediction/models/: parameter_tuning.py  train.py
tests/: test_placeholder.py
